--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,201 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: {{projectTitle}}</title>
+    <title>Cat Energy</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+      <body class="page__body">
+        <header class="main-header">
+          <div class="main-header__logo">
+            <a class="logo" href="#">
+              <img class="logo__image" src="https://via.placeholder.com/150" alt="логотип Cat Energy" />
+              <svg class="logo__text" width="24" height="24" aria-hidden="true">Cat Energy
+                <use href="#icon-menu"></use>
+              </svg>
+              <!-- решить что это, но явно не span -->
+            </a>
+          </div>
+          <nav class="main-header__nav main-nav">
+            <button class="main-nav__link-toggle" aria-label="Открыть меню навигации" type="button">
+              <svg class="main-nav__icon-toggle" width="24" height="24" aria-hidden="true">
+                <use href="#icon-menu"></use>
+              </svg>
+              <!-- <span class="main-nav__toggle-icon"></span> -->
+            </button>
+            <ul class="main-nav__list">
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--current" href="#home"
+                  >главная</a
+                >
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link" href="#about">каталог продукции</a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link" href="#contact">подбор программы</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <main class="main-content">
+          <section class="hero">
+            <h1 class="hero__title">Функциональное питание для котов</h1>
+            <img
+              class="hero__image"
+              src="https://via.placeholder.com/800x400"
+              alt="корм с курицей"
+            />
+            <p class="hero__subtitle">Занялся собой? Займись котом!</p>
+            <a class="hero__button" href="#products">подобрать программу</a>
+          </section>
+          <section class="promo-card">
+            <h2 class="promo-card__title">похудение</h2>
+            <p class="promo-card__text">
+              Ваш кот весит больше собаки и почти утратил способность лазить по
+              деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
+              сбросить лишний вес.
+            </p>
+            <a class="promo-card__button" href="#weight-loss"
+              >каталог slim
+              <svg
+                class="promo-card__icon"
+                width="24"
+                height="24"
+                aria-hidden="true"
+              >
+                <use href="#icon-arrow-right"></use>
+              </svg>
+            </a>
+          </section>
+          <section class="promo-card">
+            <h2 class="promo-card__title">набор массы</h2>
+            <p class="promo-card__text">
+              Заработать авторитет среди дворовых котов и даже собак? Серия Cat
+              Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="promo-card__button" href="#joint-support"
+              >каталог pro
+              <svg
+                class="promo-card__icon"
+                width="24"
+                height="24"
+                aria-hidden="true"
+              >
+                <use href="#icon-arrow-right"></use>
+              </svg>
+            </a>
+          </section>
+          <section class="how-it-works">
+            <h2 class="how-it-works__title">Как это работает</h2>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+            <div class="how-it-works__step">
+              <img class="how-it-works__icon" src="step1.png" alt="листочек" />
+              <p class="how-it-works__text">
+                Функциональное питание содержит только полезные питательные
+                вещества.
+              </p>
+            </div>
+            <div class="how-it-works__step">
+              <img class="how-it-works__icon" src="step3.png" alt="пробирка" />
+              <p class="how-it-works__text">
+                Выпускается в виде порошка, который нужно лишь залить кипятком — и
+                готово.
+              </p>
+            </div>
+            <div class="how-it-works__step">
+              <img class="how-it-works__icon" src="step2.png" alt="вилка и нож" />
+              <p class="how-it-works__text">
+                Замените один-два приема обычной еды на наше функциональное питание.
+              </p>
+            </div>
+            <div class="how-it-works__step">
+              <img class="how-it-works__icon" src="step3.png" alt="часы" />
+              <p class="how-it-works__text">
+                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              </p>
+            </div>
+          </section>
+          <section class="example">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+              Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+              этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <div class="example__container">
+              <div class="example__item">
+                <h3 class="example__item-title">5 КГ</h3>
+                <span class="example__item-text">снижение веса</span>
+              </div>
+              <div class="example__item">
+                <h3 class="example__item-title">60 ДНЕЙ</h3>
+                <span class="example__item-text">затрачено времени</span>
+              </div>
+            </div>
+            <div class="example__expenses-wrapper">
+              <p class="example__text-expenses">Затраты на питание:</p>
+              <span class="example__text-cost"> 15 000 РУБ.</span>
+            </div>
+            <img
+              class="example__img-difference"
+              src="#"
+              alt="Кот до и после программы похудения"
+            />
+          </section>
+          <section class="invite">
+            <h2 class="invite__title">приглашаем к сотрудничеству дилеров!</h2>
+            <div class="invite__address">
+              ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+            </div>
+          </section>
+          <section class="map">
+            <div class="map__container">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.1234567890123!2d30.123456789012345!3d59.123456789012345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1234567890123456!2sCat%20Energy%20Store!5e0!3m2!1sen!2sru!4v1234567890123456"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
+            </div>
+          </section>
+        </main>
+        <footer class="main-footer">
+          <section class="footer-links">
+            <ul class="footer-links__list main-footer__links-list">
+              <li class="footer-links__item footer-links__logo">
+                <a class="footer-links__link" href="#home"
+                  ><img src="" alt="cat energy"
+                /></a>
+              </li>
+              <li class="footer-links__item footer-links__icons">
+                <a class="footer-links__link" href="#home">
+                  <svg class="footer-links__icon" width="24" height="24">
+                    <use href="#vk"></use>
+                  </svg>
+                </a>
+                <a class="footer-links__link" href="#home">
+                  <svg class="footer-links__icon" width="24" height="24">
+                    <use href="#youtube"></use>
+                  </svg>
+                </a>
+                <a class="footer-links__link" href="#home">
+                  <svg class="footer-links__icon" width="24" height="24">
+                    <use href="#telegram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-links__item footer-links__logo-academy">
+                <a class="footer-links__link" href="#contact">
+                  <img class="footer-link__image" src="" alt="академия HTML" />
+                </a>
+              </li>
+            </ul>
+          </section>
+        </footer>
+      </body>
+    </html>
 
-  </body>
-</html>
+
